feat: update articles

--- a/监控告警/系统性能监控/网络.md
+++ b/监控告警/系统性能监控/网络.md
@@ -22,3 +22,58 @@
 # 查看系统当前网络连接数
 $ netstat -n | awk '/^tcp/ {++S[$NF]} END {for(a in S) print a, S[a]}'
 ```
+
+# mtr
+
+MTR 是一个简单的跨平台命令行网络诊断工具，将常用的 traceroute 和 ping 程序的功能组合到一个工具中。 以与 traceroute 类似的方式，mtr 打印有关数据包从运行 mtr 的主机到用户指定的目标主机的路由的信息。运行 mtr 后，它将探查本地系统与您指定的远程主机之间的网络连接。 它首先在主机之间建立每个网络跃点（网桥，路由器和网关等）的地址，然后对其进行 ping（发送 ICMP ECHO 请求的序列）以确定每个计算机的链路质量。
+
+该工具已预装在大多数 Linux 发行版中，我们也可以手动添加：
+
+```s
+$ sudo apt install mtr
+$ sudo yum install mtr
+$ sudo dnf install mtr
+```
+
+使用 mtr 的最简单示例是提供远程计算机的域名或 IP 地址作为参数，例如 google.com 或 216.58.223.78。 此命令将向您显示实时更新的路由跟踪报告，直到您退出程序（通过按 q 或 Ctrl + C）。
+
+```s
+$ mtr google.com
+OR
+$ mtr 216.58.223.78
+
+Start: Thu Jun 28 12:10:13 2018
+HOST: TecMint                     Loss%   Snt   Last   Avg  Best  Wrst StDev
+  1.|-- 192.168.0.1                0.0%     5    0.3   0.3   0.3   0.4   0.0
+  2.|-- 5.5.5.211                  0.0%     5    0.7   0.9   0.7   1.3   0.0
+  3.|-- 209.snat-111-91-120.hns.n 80.0%     5    7.1   7.1   7.1   7.1   0.0
+  4.|-- 72.14.194.226              0.0%     5    1.9   2.9   1.9   4.4   1.1
+  5.|-- 108.170.248.161            0.0%     5    2.9   3.5   2.0   4.3   0.7
+  6.|-- 216.239.62.237             0.0%     5    3.0   6.2   2.9  18.3   6.7
+  7.|-- bom05s12-in-f14.1e100.net  0.0%     5    2.1   2.4   2.0   3.8   0.5
+```
+
+常见的参数用法如下：
+
+```s
+# 强制展示 IP 地址
+$ mtr -n google.com
+
+# 同时展示域名与 IP
+$ mtr -b google.com
+
+# 使用 TCP 或者 UDP
+$ mtr --tcp test.com
+$ mtr --udp test.com
+
+# 设置测试包的大小
+$ mtr -r -s PACKETSIZE -c 5 google.com >mtr-report
+```
+
+您可以使用-r 标志将其设置为报告模式，该标志是用于生成有关网络质量的统计信息的有用选项。 您可以将此选项与-c 选项一起使用以指定 ping 的数量。 由于统计信息已打印到标准输出，因此您可以将其重定向到文件以供以后分析。
+
+```s
+$ mtr -r -c 5 google.com >mtr-report
+$ mtr -rw -c 5 google.com >mtr-report
+$ mtr -o "LSDR NBAW JMXI" 216.58.223.78
+```
