feat: update articles

--- a/监控告警/监控系统/监控系统对比.md
+++ b/监控告警/监控系统/监控系统对比.md
@@ -109,7 +109,7 @@ Prometheus 由两个部分组成，一个是监控报警系统，另一个是自
 - **较强的处理能力**：监控数据直接存储在 Prometheus Server 本地的时序数据库中，单个实例可以处理数百万的 metrics。
 - **灵活的数据模型：**同 Open-Falcon，引入了 tag，属于多维数据模型，聚合统计更方便。
 - **强大的查询语句：**PromQL 允许在同一个查询语句中，对多个 metrics 进行加法、连接和取分位值等操作。
-- **很好地支持云环境**：能自动发现容器，同时 k8s 和 etcd 等项目都提供了对 Prometheus 的原生支持，是目前容器监控最流行的方案。
+- **很好地支持云环境**：能自动发现容器，同时 K8s 和 etcd 等项目都提供了对 Prometheus 的原生支持，是目前容器监控最流行的方案。
 
 ## 缺陷
 
