feat: update articles

--- a/2.自动化运维/设计理念/体系设计.md
+++ b/2.自动化运维/设计理念/体系设计.md
@@ -1,6 +1,6 @@
 # 自动化运维的体系设计
 
-![完整的自动化运维体系示意图](https://i.postimg.cc/1tN421vc/image.png)
+![完整的自动化运维体系示意图](https://assets.ng-tech.icu/item/20230416204356.png)
 
 # 设计目标
 
