feat: update articles

--- a/3.监控告警/监控系统设计/监控系统对比.md
+++ b/3.监控告警/监控系统设计/监控系统对比.md
@@ -91,7 +91,7 @@ Prometheus 是一套开源的监控、报警、时间序列数据库的组合；
 
 Prometheus 的优势在于其易于安装使用，外部依赖较少；并且直接按照分布式、微服务架构模式进行设计，支持服务自动化发现与代码集成。Prometheus 能够自定义多维度的数据模型，内置强大的查询语句，搭配其丰富的社区扩展，能够轻松实现数据可视化。
 
-![Prometheus 生态系统](https://i.postimg.cc/g0SDCRhK/image.png)
+![Prometheus 生态系统](https://assets.ng-tech.icu/item/20230418223837.png)
 
 Prometheus 由两个部分组成，一个是监控报警系统，另一个是自带的时序数据库（TSDB）。上图是 Prometheus 整体架构图，左侧是各种符合 Prometheus 数据格式的 exporter，除此之外为了支持推动数据类型的 Agent，可以通过 Pushgateway 组件，将 Push 转化为 Pull。Prometheus 甚至可以从其它的 Prometheus 获取数据，组建联邦集群。Prometheus 的基本原理是通过 HTTP 周期性抓取被监控组件的状态，任意组件只要提供对应的 HTTP 接口并且符合 Prometheus 定义的数据格式，就可以接入 Prometheus 监控。
 
